using CommunityToolkit.Mvvm.ComponentModel;

namespace OpenHdFlightLog.ViewModels;

public abstract class ViewModelBase : ObservableObject
{
}
